# wireguard-sentry

./: README.md  pyproject.toml
src/wireguard_sentry/: cli.py
test/: demo.conf
